add stories form, action and view

--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -1,5 +1,5 @@
 <?php
-    $this->myCustomTitle = "Sign in";
+    $this->myCustomTitle = "&rarr; sign in";
     if (isset($this->errMessage)) {
 	echo '<div class="alert alert-error">'.$this->errMessage.'</div>';
     }
