--- a/application/views/scripts/stories/index.phtml
+++ b/application/views/scripts/stories/index.phtml
@@ -86,7 +86,7 @@
         
 <?php
 
-    $this->myCustomTitle = "Stories list";
+    $this->myCustomTitle = "&rarr; stories list";
 
     if (!$this->stories) { 
         
@@ -215,4 +215,4 @@
     }
 ?>
 
-<a class="btn btn-primary" id="storyAdd" href="javascript: return false;">Add new story</a>
+<a class="btn btn-primary" id="storyAdd" href="/stories/add-story/">Create a story</a>
