--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -56,9 +56,8 @@
           <a class="brand" href="#">Simple Task Manager</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="/"><?php echo $this->myCustomTitle; ?></a></li>
-              <!--<li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>-->
+	      <li><a href="/">Home</a></li>
+              <li class="active"><a href="#"><?php echo $this->myCustomTitle; ?></a></li>
             </ul>
               
 <?php 
@@ -82,7 +81,7 @@ if ($this->userInfo) {
     
      <div class="container">
 <?php
-            // echo view
+            // echo view content
             echo $this->layout()->content;
 ?>
     </div>
