--- a/application/views/scripts/stories/add-story.phtml
+++ b/application/views/scripts/stories/add-story.phtml
@@ -1,4 +1,7 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Stories</b> and script/action name <b>addStory</b></p>
-</div>
+<?php
+    $this->myCustomTitle = "&rarr; create a story";
+    if (isset($this->errMessage)) {
+	echo '<div class="alert alert-error">'.$this->errMessage.'</div>';
+    }
+    echo $this->form;
+?>
