webpage title fix

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -57,7 +57,7 @@
           <div class="nav-collapse">
             <ul class="nav">
 	      <li><a href="/">Home</a></li>
-              <li class="active"><a href="#"><?php echo $this->myCustomTitle; ?></a></li>
+              <li class="active">&rarr; <a href="#"><?php echo $this->myCustomTitle; ?></a></li>
             </ul>
               
 <?php 
