--- a/application/views/scripts/stories/index.phtml
+++ b/application/views/scripts/stories/index.phtml
@@ -87,7 +87,7 @@
         
 <?php
 
-    $this->myCustomTitle = "&rarr; stories list";
+    $this->myCustomTitle = "stories list";
 
     if (!$this->stories) { 
         
