--- a/application/views/scripts/auth/signup.phtml
+++ b/application/views/scripts/auth/signup.phtml
@@ -1,5 +1,5 @@
 <?php
-    $this->myCustomTitle = "&rarr; sign up";
+    $this->myCustomTitle = "sign up";
     if (isset($this->errMessage)) {
 	echo '<div class="alert alert-error">'.$this->errMessage.'</div>';
     }
