--- a/application/views/scripts/stories/update-story.phtml
+++ b/application/views/scripts/stories/update-story.phtml
@@ -1,5 +1,5 @@
 <?php
-    $this->myCustomTitle = "&rarr; update story";
+    $this->myCustomTitle = "update story";
     if (isset($this->errMessage)) {
 	echo '<div class="alert alert-error">'.$this->errMessage.'</div>';
     }
